<resources>
    <string name="app_name">PCMall</string>
    <string name="title_home">主页</string>
    <string name="title_category">分类</string>
    <string name="title_cart">购物车</string>
    <string name="title_myself">我的</string>
    <string name="title_address">收货地址</string>
    <string name="title_address_add">新增地址</string>
    <string name="title_address_update">编辑地址</string>
    <string name="title_address_select">选择地址</string>
    <string name="title_order_create">确认订单</string>
    <string name="title_order_detail">订单详情</string>
    <string name="title_goods_list">商品列表</string>
    <string name="title_user_information">信息修改</string>
    <string name="title_user_password">密码修改</string>
    <string name="searchbar_goods">搜索商品</string>
    <string name="searchbar_order">搜索订单</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="title_all">全部</string>
    <string name="title_pay">待付款</string>
    <string name="title_send">待发货</string>
    <string name="title_deliver">待收货</string>
    <string name="title_finish">已完成</string>
    <string name="title_refund">退款/售后</string>
    <string name="remember_me">记住我</string>

    <string name="goods_item_name">%s%s</string>
    <string name="order_item_count">共%s件商品，实付金额：</string>
    <string name="price">￥%s</string>
    <string name="count">x %s</string>
    <string name="recyclerview_order_item_oid">订单号：%s</string>

</resources>